# cpp_ci_cd_example

./: CMakeLists.txt  vcpkg.json
src/: main.cpp  test.cpp
